# word-cloud-generator

./: README.md  build-windows.ps1
frontend/: README.md  index.html  package-lock.json  package.json
frontend/rcs/: blacklist.txt  input.txt  style.css
frontend/src/: colorpicker.js  generator.js  input.js  interface.js  main.js  renderer.js  utils.js
generator/: Cargo.toml
generator/src/: cli.rs  element.rs  graphics.rs  io.rs  main.rs  spiral.rs  wordcloud.rs
