[package]
name = "wcgrs"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof1@gmail.com>"]
edition = "2018"

[dependencies]
rusttype = "0.7.6"
image = "0.22.5"
regex = "1.1.6"
font-loader = "0.8.0"
imageproc = "0.18.0"
quicli = "0.4"
structopt = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.6.5"